--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,6 +46,8 @@ File: scss
 @import './components/loader';
 @import './components/list';
 @import './components/student-dashboard';
+@import './components/page-header';
+
 // @import './components/nav-container';
 @import './components/student-years';
 @import './components/visibility';
