--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,25 +1,50 @@
 .button {
-    background: $blue;
-    border: none;
-    color: white;
-    display: inline-block;
-    font-size: $font-size-large;
-    font-weight: 300;
-    line-height: 1;
-    padding: $s-size;
+  background: $blue;
+  border: none;
+  color: white;
+  display: inline-block;
+  font-size: $font-size-large;
+  font-weight: 300;
+  line-height: 1;
+  padding: $s-size;
+  text-decoration: none;
+  &:hover {
     text-decoration: none;
+    color:#FFFFFF;
   }
-  
-  .button--link {
-    background: none;
-  }
-  
-  .button--secondary {
-    background: #888;
-  }
+}
 
-  .button--year {
-    background: white;
-    color: $dark-blue;
-  }
+.button--link {
+  background: none;
+}
+
+.button--secondary {
+  background: #888;
+}
+
+
+// .button {
+//     background: $blue;
+//     border: none;
+//     color: white;
+//     display: inline-block;
+//     font-size: $font-size-large;
+//     font-weight: 300;
+//     line-height: 1;
+//     padding: $s-size;
+//     text-decoration: none;
+//   }
+  
+//   .button--link {
+//     // background: none;
+//   }
+  
+//   .button--secondary {
+//     background: #888;
+//   }
+
+//   .button--year {
+//     background: white;
+//     color: $dark-blue;
+//   }
   
