--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -2,7 +2,7 @@
   align-items: center;
   // background: url('/images/bg.jpg');
   background-color: #1F2125;
-  background-size: cover;
+  // background-size: cover;
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -14,7 +14,7 @@
 .box-layout__box {
   background: fade-out(white, .15);
   border-radius: 3px;
-  padding: $l-size $m-size;
+  padding: $m-size $m-size;
   // text-align: center;
   // width: 28rem;
 
