--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,8 @@
 @import './components/data-table';
 @import './components/student-years';
 @import './components/visibility';
+@import './components/alert';
+
 
 
 
